--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 <body>
 
 <!-- 	<h1> click me </h1>
-	<button type="button">Click Me!</button> -->
+	<button type="button">Click Me!</button> 
+	<input type = "text" x-webkit-speech> -->
 
+<!-- CSS Styles -->
 <style>
   .speech {border: 1px solid #DDD; width: 300px; padding: 0; margin: 0}
   .speech input {border: 0; width: 240px; display: inline-block; height: 30px;}
@@ -18,7 +20,7 @@
 <form id="labnol" method="get" action="https://www.google.com/search">
   <div class="speech">
     <input type="text" name="q" id="transcript" placeholder="Speak" />
-    <img onclick="startDictation()" src="list.png" />
+    <img onclick="startDictation()" src="//i.imgur.com/cHidSVu.gif" />
   </div>
 </form>
 
@@ -41,6 +43,7 @@
                                  = e.results[0][0].transcript;
         recognition.stop();
         document.getElementById('labnol').submit();
+        console.log(e.results.transcript)
       };
 
       recognition.onerror = function(e) {
