--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                  = e.results[0][0].transcript;
         recognition.stop();
         document.getElementById('labnol').submit();
-        console.log(e.results.transcript)
+        console.log("working")
       };
 
       recognition.onerror = function(e) {
