--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
 </style>
 
 <!-- Search Form -->
-<form id="labnol" method="get" action="https://www.google.com/search">
+<form id="labnol" method="get" >
   <div class="speech">
     <input type="text" name="q" id="transcript" placeholder="Speak" />
     <img onclick="startDictation()" src="//i.imgur.com/cHidSVu.gif" />
@@ -26,7 +26,8 @@
 
 <!-- HTML5 Speech Recognition API -->
 <script>
-  function startDictation() {
+	// debugger;
+  // function startDictation() {
 	console.log("step one")
     if (window.hasOwnProperty('webkitSpeechRecognition')) {
 
@@ -40,11 +41,17 @@
 
       recognition.onresult = function(e) {
 
-        document.getElementById('transcript').value
-                                 = e.results[0][0].transcript;
-        recognition.stop();
+      	var last = event.results.length - 1;
+  		var sample = event.results[last][0].transcript;
+  		diagnostic.textContent = 'Result received: ' + sample + '.';
+  		
+  console.log('Confidence: ' + event.results[0][0].confidence);
+
+        // document.getElementById('transcript').value
+        //                          = e.results[0][0].transcript;
+        // recognition.stop();
         // document.getElementById('labnol').submit();
-        console.log("transcript")
+        // console.log("transcript")
       };
 
       recognition.onerror = function(e) {
@@ -52,7 +59,7 @@
       }
 
     }
-  }
+  // }
 
   	console.log("step two")
 </script>
